Adding gc logs for server and fix force argument passed while server starting
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@19608 7fc7bbf3-cf45-46d4-be06-341739edd864